# CMemAllocater

./: CMakeLists.txt
.cache/clangd/index/: allocater.h.85160093305B5E42.idx  allocator.c.62700AA048CDD825.idx  allocatorTests.c.778EDF1ECEFA1819.idx  allocatorTests.cpp.DB2B08997CE2AB4B.idx  main.c.89C12D768B4FC353.idx  main.c.931EC9918DC5B59E.idx
examples/: CMakeLists.txt
include/: allocater.h
src/: CMakeLists.txt  allocator.c
tests/: CMakeLists.txt  allocatorTests.cpp
